2006-11-10  Timothee Lecomte  <timothee.lecomte@ens.fr>

        * src/win/wpause.c:
        * src/win/wtext.c:
        * src/wxterminal/wxt_gui.cpp:
        * src/wxterminal/wxt_gui.h:
        * src/wxterminal/wxt_plot.h:
        Rework and simplify the event handling from the wxt terminal on
        Windows. Remove hooks from the wxt terminal in the Windows files.

        * src/plot.c (main):
        * src/plot.h:
        Introduce a boolean to track the use of "-persist" on the command line.
        Remove WXWIDGETS-specific code. Call term_reset() using GP_ATEXIT().

        * src/wxterminal/Makefile.am:
        * src/wxterminal/wxt_plot.h:
        Remove the file wxt_plot.h, now unused.

        * src/wxterminal/wxt_gui.cpp (wxt_init, wxt_atexit):
        * src/wxterminal/wxt_gui.h:
        Use GP_ATEXIT() to register wxt_atexit().
        Rework "persist" behaviour on Windows.

        * configure.in:
        * wxt_gui.cpp (wxt_atexit):
        * wxt_gui.h:
        Use fork() to make the "persist" behaviour satisfying on UNIX.

2006-11-07  Timothee Lecomte  <timothee.lecomte@ens.fr>

        * src/wxterminal/wxt_gui.cpp (wxtPanel::DrawToDC): Draw the zoom
        coordinates with the same font as the plot.

2006-11-04  Ethan Merritt  <merritt@u.washington.edu>

	* term/x11.trm (parse_driver): If this routine fails on first entry, we
	must not call int_error() because the longjump has not been set up yet.
	I.e. "setenv GNUPLOT_DRIVER_DIR illegal; setenv GNUTERM x11; gnuplot"
	would segfault on entry. Just a print warning and hope the user notices.

2006-11-03  Ethan Merritt  <merritt@u.washington.edu>

	* src/datafile.c (df_readline): If the datafile we are supposedly
	reading from was never opened, simply return DF_EOF. This relieves the
	caller from having to check this separately before calling df_readline.

	* src/datafile.c (df_open); If the datafile cannot be opened, set
	df_eof and return DF_EOF. FIXME: Having both methods is stupid; we